# jspprint

./: .gitignore  README.md  pyproject.toml
src/jsp/: cli.py  io.py
src/jspprint/: cli.py  io.py
tests/: test_cli.py  test_io.py
